--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "minimalist": "^1.0.0",
+    "minimist": "^1.2.5",
     "xml2js": "^0.4.23"
   }
 }
