--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "follow-redirects": "^1.15.2",
     "minimist": "^1.2.5",
     "xml2js": "^0.4.23"
   }
