Migrate actions to latest version (node 20+)

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,14 +22,14 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
     - run: node index.js
-    - uses: stefanzweifel/git-auto-commit-action@v4
+    - uses: stefanzweifel/git-auto-commit-action@v5
       with:
-        commit_author: zeyus[bot] <zeyus@zeyus.com>
+        commit_author: zeyus[bot] <dev@zeyus.com>
