--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
   "name": "mep-contact",
-  "version": "1.0.0",
-  "description": "Repackage XML files from european parliament",
+  "version": "1.1.0",
+  "description": "Consolidate and present contact information for European parliament representatives",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "zeyus",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/zeyus/contact-mep-representative/issues"
+  },
+  "displayName": "Contact your MEP",
+  "readme": "README.md",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zeyus/contact-mep-representative.git"
+  },
+  "homepage": "https://zeyus.com/contact-mep-representative",
+  "keywords": [
+    "MEP",
+    "contact",
+    "representatives",
+    "European Parliament",
+    "EU"
+  ],
   "dependencies": {
     "cheerio": "^1.2.0",
     "follow-redirects": "^1.15.11",
-    "minimist": "^1.2.5",
+    "minimist": "^1.2.8",
     "xml2js": "^0.6.2"
   }
 }
